--- a/css/index.html
+++ b/css/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="./pc-reset.css">
+    <link rel="stylesheet" href="pc/pcReset.css">
 </head>
 <body>
    <div class="div">
