--- a/phone/auto phone/auto.html
+++ b/phone/auto phone/auto.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style>
 
+    <style>
+        .div{
+            width:120px;
+            height:110px;
+            background:blue;
+            color:#fff;
+        }
     </style>
 </head>
-<body>
-
+   <div class="div">
+        adfadf
+   </div>
+<script>
+    var a =1;
+    console.log(a)
+</script>
 </body>
 </html>
