--- a/日常插件效果/数字跳动/bounce.html
+++ b/日常插件效果/数字跳动/bounce.html
@@ -9,12 +9,19 @@
 </head>
 <body>
 	<div id="div">
-		234234.00
+		923489.12
 	</div>
-
+	<div class="adiv">
+		129.12
+	</div>
+<div class="adiv">
+		1292323.12
+	</div>
 	<script src="bounce.js"></script>
 	<script>
-	   document.getElementById("div").mBounce();
+	   // document.getElementById("div").mBounce(100);
+	   document.querySelectorAll('.adiv').mBounce();
+	   // 数字调动，参数默认是 80 毫秒
 	</script>
 </body>
 </html>
