--- a/日常插件效果/数字跳动/bounce.html
+++ b/日常插件效果/数字跳动/bounce.html
@@ -11,16 +11,14 @@
 	<div id="div">
 		923489.12
 	</div>
-	<div class="adiv">
-		129.12
+	<div id="adiv">
+		129
 	</div>
-<div class="adiv">
-		1292323.12
-	</div>
+
 	<script src="bounce.js"></script>
 	<script>
-	   // document.getElementById("div").mBounce(100);
-	   document.querySelectorAll('.adiv').mBounce();
+	   document.getElementById("div").mBounce(50);
+	   document.getElementById("adiv").mBounce();
 	   // 数字调动，参数默认是 80 毫秒
 	</script>
 </body>
