--- a/日常插件效果/数字跳动/bounce.html
+++ b/日常插件效果/数字跳动/bounce.html
@@ -14,7 +14,7 @@
 	<div id="adiv">
 		129
 	</div>
-
+    <!--目前不支IE8-->
 	<script src="bounce.js"></script>
 	<script>
 	   document.getElementById("div").mBounce(50);
