--- a/css/pc/index.html
+++ b/css/pc/index.html
@@ -2,14 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="yes" name="apple-mobile-web-app-capable">
-    <meta content="yes" name="apple-touch-fullscreen">
-    <meta name="format-detection" content="telephone=no,email=no">
-    <meta content="telephone=no,email=no" name="format-detection">
-    <meta name="full-screen" content="yes">
-    <meta name="screen-orientation" content="portrait">
-    <meta name="x5-orientation" content="portrait">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="renderer" content="webkit">
     <meta name="keyword" content="">
     <meta name="description" content="">
     <title>Title</title>
