--- a/JQuery/滚动加载动画/index.html
+++ b/JQuery/滚动加载动画/index.html
@@ -3,8 +3,29 @@
 <head>
 	<meta charset="UTF-8">
 	<title>滚动加载</title>
+	<style type="text/css">
+      *{border:0;margin:0;padding:0;}
+      .one{width:100%;height:500px;background:red;color:#fff;font-size:30px;text-align: center;}
+      .two{width:100%;height:500px;background:blue;color:#fff;font-size:30px;text-align: center;}
+      .three{width:100%;height:500px;background:black;color:#fff;font-size:30px;text-align: center;}
+
+	</style>
+
 </head>
+<div></div>
+<div class="one"></div>
+<div class="two">快滚动到我时触发</div>
+<div class="three"></div>
 <body>
-	<script type="text/javascript"></script>
+    <script src="http://apps.bdimg.com/libs/jquery/1.8.0/jquery.min.js"></script>
+    <script src="mScroll.js"></script>
+	<script>
+      $(".two").mScroll(10,function(){
+      	 alert(111)
+      },function(){
+      	 console.log(222)
+      })
+	</script>
 </body>
 </html>
+
