--- a/JQuery/滚动加载动画/index.html
+++ b/JQuery/滚动加载动画/index.html
@@ -21,9 +21,9 @@
     <script src="mScroll.js"></script>
 	<script>
       $(".two").mScroll(10,function(){
-      	 alert(111)
+      	 alert(111)  // 到达某元素固定距离是的回调函数
       },function(){
-      	 console.log(222)
+         alert(222)  // 离开某元素固定距离是的回调函数
       })
 	</script>
 </body>
