--- a/js/数字跳动/bounce.html
+++ b/js/数字跳动/bounce.html
@@ -18,7 +18,7 @@
 	<script src="bounce.js"></script>
 	<script>
 	   document.getElementById("div").mBounce(50);
-	   document.getElementById("adiv").mBounce();
+	   // document.getElementById("adiv").mBounce();
 	   // 数字调动，参数默认是 80 毫秒
 	</script>
 </body>
